--- a/compose.yml
+++ b/compose.yml
@@ -13,6 +13,13 @@ services:
     ports:
       - '5432:5432'
 
+  redis:
+    image: redis:alpine
+    container_name: files-manager-redis
+    restart: always
+    ports:
+      - 6379:6379
+
 volumes:
   data:
     driver: local
